--- a/.github/workflows/free-tier-creation.yml
+++ b/.github/workflows/free-tier-creation.yml
@@ -29,8 +29,9 @@ jobs:
         uses: actions/setup-python@v5.6.0
         with:
           python-version: '3.x'
+          check-latest: false
           cache: 'pip'
-          #check-latest: false
+          cache-dependency-path: requirements.txt
 
       - name: Install tool dependencies
         run: |
