--- a/.github/workflows/free-tier-creation.yml
+++ b/.github/workflows/free-tier-creation.yml
@@ -24,19 +24,22 @@ jobs:
     steps:
       - run: echo "oci-cli" > requirements.txt
       - uses: actions/setup-python@v5.6.0
+        id: setup-python
         with:
           python-version: '3.x'
           check-latest: false
           update-environment: true
-          cache: 'pip'
+          #cache: 'pip'
       - uses: actions/cache@v4.2.4
+        id: pip-cache
         with:
           path: |
-            ~/.local/lib/
-            ~/.local/bin/
-          key: ${{ runner.os }}-local-installed-by-pip-${{ hashFiles('**/requirements.txt') }}
+            ~/.cache/pip
+            ~/.local/lib
+            ~/.local/bin
+          key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-local-installed-by-pip-
+            ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pip-
       - run: pip install --user -r requirements.txt
 
       - name: Setup OCI configuration
