--- a/.github/workflows/free-tier-creation.yml
+++ b/.github/workflows/free-tier-creation.yml
@@ -1,8 +1,8 @@
 name: 'Oracle Free Tier Instance Creator'
 
 on:
-  #schedule:
-  #  - cron: "2/5 * * * *"
+  schedule:
+    - cron: "*/6 * * * *"
 
   workflow_dispatch:
     inputs:
