Fix debug flag issue and enhance workflow control
- Create dual-mode OCI command wrappers to separate debug and data extraction
- Add intelligent oci_cmd() that automatically chooses appropriate mode
- Add check_existing_instance workflow input for conditional pre-flight checks
- Scheduled workflows: Skip instance check, attempt direct launch
- Manual workflows: Optional instance checking (default: true)
- Enhanced error handling: Detect and handle duplicate instance scenarios
- Add DUPLICATE error type, treat as success case with info notification

Fixes: Debug output no longer pollutes data extraction
Enhances: Workflow efficiency and error handling robustness

--- a/.github/workflows/free-tier-creation.yml
+++ b/.github/workflows/free-tier-creation.yml
@@ -14,11 +14,17 @@ on:
         description: 'Send Telegram notifications'
         type: boolean
         default: true
+      check_existing_instance:
+        description: 'Check for existing instance before launch'
+        type: boolean
+        default: true
 
 env:
   # Global environment variables
   DEBUG: ${{ inputs.verbose_output && 'true' || 'false' }}
   ENABLE_NOTIFICATIONS: ${{ inputs.send_notifications && 'true' || 'false' }}
+  # For scheduled runs: skip instance check (direct launch), for manual: allow checking
+  CHECK_EXISTING_INSTANCE: ${{ github.event_name == 'workflow_dispatch' && (inputs.check_existing_instance && 'true' || 'false') || 'false' }}
   # Suppress OCI CLI file permissions warnings
   OCI_CLI_SUPPRESS_FILE_PERMISSIONS_WARNING: true
 
