Fix preflight check: Add default OCI_SHAPE and flexible shape variables
PROBLEM: Preflight check failing because OCI_SHAPE not set in workflow env vars
SOLUTION: Add default shape configuration for validation purposes
- OCI_SHAPE: VM.Standard.A1.Flex (overridden per-shape in parallel execution)
- OCI_OCPUS: 4, OCI_MEMORY_IN_GBS: 24 (default flexible shape config)
- INSTANCE_DISPLAY_NAME: default-instance (overridden per-shape)

These defaults are only used for preflight validation. The actual parallel
execution overrides these with shape-specific values via launch-parallel.sh

--- a/.github/workflows/free-tier-creation.yml
+++ b/.github/workflows/free-tier-creation.yml
@@ -37,6 +37,10 @@ jobs:
       # Multi-AD support: Use comma-separated list for multiple ADs
       # Example: "fgaj:AP-SINGAPORE-1-AD-1,fgaj:AP-SINGAPORE-1-AD-2,fgaj:AP-SINGAPORE-1-AD-3"
       OCI_AD: "fgaj:AP-SINGAPORE-1-AD-1"
+      OCI_SHAPE: "VM.Standard.A1.Flex"  # Default shape for validation (overridden per-shape)
+      OCI_OCPUS: "4"  # Default for A1.Flex validation (overridden per-shape)
+      OCI_MEMORY_IN_GBS: "24"  # Default for A1.Flex validation (overridden per-shape)
+      INSTANCE_DISPLAY_NAME: "default-instance"  # Default for validation (overridden per-shape)
       ASSIGN_PUBLIC_IP: "false"
       OPERATING_SYSTEM: "Oracle Linux"
       OS_VERSION: "9"
