Fix Jekyll baseurl for proper GitHub Pages deployment
Set baseurl to /OracleInstanceCreator to ensure correct asset paths
when deploying to GitHub Pages subdirectory.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ description: Real-time monitoring and analytics for Oracle Cloud Infrastructure 
 theme: minima
 
 # Custom settings
-baseurl: ""
+baseurl: "/OracleInstanceCreator"
 url: "https://senomorf.github.io"
 
 # Plugins
