--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -13,6 +13,8 @@ on:
     branches: [ "master" ]
 permissions:
   contents: read
+  statuses: write      # Allow updating commit statuses
+  pull-requests: write # Allow PR comments
 jobs:
   run-lint:
     runs-on: ubuntu-latest
