Fix workflow syntax and update copyright year per review feedback
- Fix workflow conditional syntax: github.event.repository.vars -> vars
- Update LICENSE copyright year to 2024-2025
- Address critical issues identified in PR review

--- a/.github/workflows/infrastructure-deployment.yml
+++ b/.github/workflows/infrastructure-deployment.yml
@@ -69,7 +69,7 @@ env:
 jobs:
   create-instance:
     # Skip execution if instance already created (unless manually reset)
-    if: ${{ github.event.repository.vars.INSTANCE_CREATED != 'true' || inputs.reset_success_state }}
+    if: ${{ vars.INSTANCE_CREATED != 'true' || inputs.reset_success_state }}
     runs-on: ubuntu-latest
     name: Deploy OCI Infrastructure (Parallel Orchestration)
     permissions:
