TASK-123 Add PR triggers to main workflow for comprehensive validation
- Add pull_request triggers (opened, synchronize, reopened) to infrastructure-deployment.yml
- Aligns with Claude review bot behavior to run on all PR events
- Ensures workflow validation happens automatically on PR updates
- Maintains existing schedule and workflow_dispatch triggers

--- a/.github/workflows/infrastructure-deployment.yml
+++ b/.github/workflows/infrastructure-deployment.yml
@@ -25,6 +25,10 @@ on:
     # 20min intervals for 5 hours × 2 days = moderate frequency
     - cron: "*/20 1-6 * * 6,0"
 
+  pull_request:
+    types: [opened, synchronize, reopened]
+    # Trigger on PR events same as Claude review bot
+    
   workflow_dispatch:
     inputs:
       verbose_output:
