--- a/.editorconfig
+++ b/.editorconfig
@@ -31,7 +31,8 @@ indent_size = 2
 [*.{yml,yaml}]
 indent_style = space
 indent_size = 2
-max_line_length = 120
+# Disable line length for YAML files - handled by yamllint instead
+# max_line_length = 120
 
 # HTML files
 [*.html]
@@ -66,4 +67,5 @@ indent_size = 4
 [.github/workflows/*.{yml,yaml}]
 indent_style = space
 indent_size = 2
-max_line_length = 120
+# Disable line length enforcement for GitHub workflows to allow long Claude Code prompts
+# max_line_length = 120
