--- a/.github/workflows/infrastructure-deployment.yml
+++ b/.github/workflows/infrastructure-deployment.yml
@@ -1,3 +1,4 @@
+---
 permissions:
   contents: read
   actions: write
@@ -5,26 +6,26 @@ name: 'OCI Orchestrator - Infrastructure Deployment'
 
 on:
   schedule:
-    # Four-tier optimization: 10-min off-peak, 15-min peak (~4,320 runs/month)
+    # Four-tier optimization: 10-min off-peak, 15-min peak (~2,592 runs/month)
     # All schedules target Oracle Cloud optimal availability windows for maximum deployment success
-    
+
     # TIER 1: Off-peak aggressive (10-min intervals)
     # UTC 2-7am = SGT 10am-3pm (lunch/afternoon lull)
-    # UTC 2-7am = EST 9pm-2am (late evening/night)  
+    # UTC 2-7am = EST 9pm-2am (late evening/night)
     # UTC 2-7am = CET 3-8am (early morning)
     - cron: "*/10 2-7 * * *"
-    
+
     # TIER 2: Late night/early morning (10-min intervals)
     # UTC 20-23 = SGT 4am-7am (early morning low usage, avoids overlap with TIER 1)
     - cron: "*/10 20-23 * * *"
-    
+
     # TIER 3: Peak hours conservative (15-min intervals)
     # UTC 8-19 = SGT 4pm-3am (business end + evening peak)
     - cron: "*/15 8-19 * * *"
-    
-    # TIER 4: Weekend boost (10-min intervals all day)
-    # Saturdays and Sundays - lower weekend cloud usage
-    - cron: "*/10 * * * 6,0"
+
+    # TIER 4: Weekend boost (10-min intervals UTC 0-1 only)
+    # Saturdays and Sundays UTC 0-1 - avoids overlap with other tiers
+    - cron: "*/10 0-1 * * 6,0"
 
   workflow_dispatch:
     inputs:
