fix: eliminate schedule overlaps by restricting weekday tiers to Mon-Fri
- TIER 1-3: Add 1-5 (Mon-Fri) constraint to prevent weekend overlap
- TIER 4: Maintains */10 all weekend hours without conflicts
- Total frequency: ~4,320 runs/month with no overlapping executions
- Ensures concurrency group effectiveness without duplicate runs

--- a/.github/workflows/infrastructure-deployment.yml
+++ b/.github/workflows/infrastructure-deployment.yml
@@ -6,25 +6,25 @@ name: 'OCI Orchestrator - Infrastructure Deployment'
 
 on:
   schedule:
-    # Four-tier optimization: 10-min off-peak, 15-min peak (~4,392 runs/month)
+    # Four-tier optimization: 10-min off-peak weekdays, 15-min peak weekdays, 10-min all weekend (~4,320 runs/month)
     # All schedules target Oracle Cloud optimal availability windows for maximum deployment success
 
-    # TIER 1: Off-peak aggressive (10-min intervals)
+    # TIER 1: Off-peak aggressive (10-min intervals) - Weekdays only
     # UTC 2-7am = SGT 10am-3pm (lunch/afternoon lull)
     # UTC 2-7am = EST 9pm-2am (late evening/night)
     # UTC 2-7am = CET 3-8am (early morning)
-    - cron: "*/10 2-7 * * *"
+    - cron: "*/10 2-7 * * 1-5"
 
-    # TIER 2: Late night/early morning (10-min intervals)
+    # TIER 2: Late night/early morning (10-min intervals) - Weekdays only
     # UTC 20-23 = SGT 4am-7am (early morning low usage, avoids overlap with TIER 1)
-    - cron: "*/10 20-23 * * *"
+    - cron: "*/10 20-23 * * 1-5"
 
-    # TIER 3: Peak hours conservative (15-min intervals)
+    # TIER 3: Peak hours conservative (15-min intervals) - Weekdays only
     # UTC 8-19 = SGT 4pm-3am (business end + evening peak)
-    - cron: "*/15 8-19 * * *"
+    - cron: "*/15 8-19 * * 1-5"
 
     # TIER 4: Weekend boost (10-min intervals all day)
-    # Saturdays and Sundays - lower weekend cloud usage
+    # Saturdays and Sundays - lower weekend cloud usage, no overlap with weekday tiers
     - cron: "*/10 * * * 6,0"
 
   workflow_dispatch:
