refactor: disable final newline requirements in all linters
- Set insert_final_newline = false in EditorConfig
- Add new-line-at-end-of-file: disable to yaml-lint config
- Maintains all other formatting rules while removing newline enforcement

--- a/.github/linters/.yaml-lint.yml
+++ b/.github/linters/.yaml-lint.yml
@@ -4,6 +4,9 @@ rules:
   # Disable line length enforcement for YAML files
   line-length: disable
 
+  # Disable final newline requirement
+  new-line-at-end-of-file: disable
+
   # Keep other useful rules active
   comments:
     min-spaces-from-content: 1
