--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ root = true
 charset = utf-8
 end_of_line = lf
 # insert_final_newline = unset  # Don't enforce either way
-trim_trailing_whitespace = false
+# trim_trailing_whitespace = unset  # Don't enforce either way
 
 # Shell scripts
 [*.sh]
