--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -1,6 +1,5 @@
----
-# This workflow executes several linters on changed files based on languages
-# used in your code base whenever you push a code or open a pull request.
+# This workflow executes several linters on changed files based on languages used in your code base whenever
+# you push a code or open a pull request.
 #
 # You can adjust the behavior by modifying this file.
 # For more information, see:
@@ -9,13 +8,13 @@ name: Lint Code Base
 
 on:
   push:
-    branches: ["master"]
+    branches: [ "master" ]
   pull_request:
-    branches: ["master"]
+    branches: [ "master" ]
 permissions:
   contents: read
-  statuses: write       # Allow updating commit statuses
-  pull-requests: write  # Allow PR comments
+  statuses: write      # Allow updating commit statuses
+  pull-requests: write # Allow PR comments
 jobs:
   run-lint:
     runs-on: ubuntu-latest
@@ -23,8 +22,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
         with:
-          # Full git history is needed to get a proper
-          # list of changed files within `super-linter`
+          # Full git history is needed to get a proper list of changed files within `super-linter`
           fetch-depth: 0
 
       - name: Lint Code Base
@@ -33,4 +31,3 @@ jobs:
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: "master"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          JSCPD_THRESHOLD: 2
