fix: disable JSON_PRETTIER style-only linter
Disable JSON_PRETTIER linter which only enforces cosmetic formatting
preferences (quote style, spacing) without providing any code quality
or functionality benefits.

This completes the cleanup of style-only linters while maintaining
all security, functionality, and maintainability focused linters:
- CHECKOV (security scanning) ✅
- GITLEAKS (secret detection) ✅
- GITHUB_ACTIONS (workflow security) ✅
- JSCPD (code duplication) ✅
- JSON (syntax validation) ✅
- YAML (syntax validation) ✅

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -32,3 +32,4 @@ jobs:
           DEFAULT_BRANCH: "master"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_YAML_PRETTIER: false
+          VALIDATE_JSON_PRETTIER: false
