fix: address all Claude PR review issues and enhance state management reliability
**High Priority Fixes:**
- Fix state file location inconsistency with absolute path handling
- Resolve cache key race condition via workflow-level date key generation
- Add proper error propagation in verify_and_update_state function

**Medium Priority Enhancements:**
- Implement dynamic cache TTL based on region contention (50% reduction for high-traffic regions)
- Add enhanced resource verification with shape configuration validation
- Expand CLI interface with stats, health, purge, and verify-config commands

**Quality Improvements:**
- Create comprehensive test suite with 70+ tests covering all functionality
- Add robust error handling with specific exit codes
- Improve logging consistency and debugging capabilities
- Maintain 100% backward compatibility with graceful fallbacks

**Technical Details:**
- Added get_state_file_path() and get_cache_dir() for consistent paths
- Enhanced verify_and_update_state() with detailed error tracking
- Added verify_instance_configuration() for shape/resource validation
- Integrated CACHE_DATE_KEY workflow variable to prevent midnight race conditions
- Added cache statistics, health checks, and purge functionality

**Testing:**
- New tests/test_state_manager.sh with comprehensive coverage
- Tests for path consistency, cache operations, TTL logic, error handling
- Integrated into existing test runner for CI/CD validation

Addresses all issues identified in Claude's comprehensive PR review while
maintaining the core 80-90% API call reduction benefit and system reliability.

--- a/.github/workflows/infrastructure-deployment.yml
+++ b/.github/workflows/infrastructure-deployment.yml
@@ -133,6 +133,7 @@ jobs:
         env:
           CACHE_ENABLED: "true"
           CACHE_TTL_HOURS: "24"
+          CACHE_DATE_KEY: ${{ steps.get-date.outputs.date }}
         run: |
           # Make state manager executable
           chmod +x scripts/state-manager.sh
@@ -228,6 +229,7 @@ jobs:
           TELEGRAM_USER_ID: ${{ secrets.TELEGRAM_USER_ID }}
           CACHE_ENABLED: "true"
           CACHE_TTL_HOURS: "24"
+          CACHE_DATE_KEY: ${{ steps.get-date.outputs.date }}
         run: ./scripts/launch-parallel.sh
 
       - name: Verify instances and update state
@@ -236,6 +238,8 @@ jobs:
           OCI_COMPARTMENT_ID: ${{ secrets.OCI_COMPARTMENT_ID }}
           OCI_REGION: ${{ secrets.OCI_REGION }}
           CACHE_ENABLED: "true"
+          CACHE_TTL_HOURS: "24"
+          CACHE_DATE_KEY: ${{ steps.get-date.outputs.date }}
         run: |
           # Verify actual instance state via OCI API and update cache
           echo "Verifying instance state and updating cache..."
